# slashtilities

./: .gitignore  Procfile  README.md  app.json  autoselfhost.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
slashtilities/: __init__.py  __init__.pyi  __main__.py  background.py  cc.py  ccing.py  cogs.py  database.py  igotpinged.py  meta.py  misc.py  polling.py  settings.py  utils.py
tests/: test_heroku_ready.py  test_slashtilities.py
